--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -310,8 +310,9 @@
                 Visible: =wizardStep = 1
 
             com_NabGalleries As com_Galleries:
+                EntriesToDisplay: =4
                 EntryLabels: |-
-                    ={Line1: "Broj artikla:", Line2: "Rok trajanja:", Line3: "LOT:", Line4: "Rezervisana količina:", Line5: "Potrebna količina:"}
+                    ={Line1: "Broj artikla:", Line2: "Rok trajanja:", Line3: "LOT:", Line4: "Rezervisana količina:"}
                 FillPortions: =1
                 LayoutMinHeight: =250
                 LayoutMinWidth: =350
