--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -367,7 +367,9 @@
 
     com_NabModal As com_Modal:
         IsInventura: =false
+        IsNabavniNalog: =true
         LineId: =com_NabGalleries.SelectedLine.Line_No
+        LotNo: =com_NabGalleries.SelectedEntry.LOT_No
         Quantity: =com_NabGalleries.SelectedEntry.Quantity
         QuantityCompleted: =com_NabGalleries.SelectedEntry.Quantity_Completed
         QuantityNewLOT: =com_NabGalleries.SelectedEntry.Quantity_NewLOT
