--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -426,7 +426,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -435,9 +435,9 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =Abs(ThisItem.Quantity_NewLOT)
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 150
-                        X: =Title3_2.Width + Title3_2.X
-                        Y: =lbl_EntryQuantityCompleted.Y + lbl_EntryQuantityCompleted.Height + 5
+                        Width: =1194
+                        X: =150
+                        Y: =116
                         ZIndex: =2
 
                     lbl_EntryQuantityCompleted As label:
@@ -446,7 +446,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -455,9 +455,9 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =Abs(ThisItem.Quantity_Completed)
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 150
-                        X: =Title3_2.Width + Title3_2.X
-                        Y: =lbl_EntryLOTNo.Y + lbl_EntryItemNo.Height + 5
+                        Width: =1194
+                        X: =150
+                        Y: =89
                         ZIndex: =3
 
                     lbl_EntryLOTNo As label:
@@ -466,7 +466,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -475,9 +475,9 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =ThisItem.LOT_No
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 150
-                        X: =Title3_2.Width + Title3_2.X
-                        Y: =lbl_EntryExpDate.Y + lbl_EntryExpDate.Height + 5
+                        Width: =1194
+                        X: =150
+                        Y: =63
                         ZIndex: =4
 
                     lbl_EntryExpDate As label:
@@ -486,7 +486,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -495,8 +495,8 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =ThisItem.Exp_Date
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 150
-                        X: =Title3_2.Width + Title3_2.X
+                        Width: =1194
+                        X: =150
                         Y: =lbl_EntryItemNo.Y + lbl_EntryItemNo.Height + 5
                         ZIndex: =9
 
@@ -506,7 +506,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -515,8 +515,8 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =ThisItem.Entry_No
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 150
-                        X: =Title3_2.Width + Title3_2.X
+                        Width: =1194
+                        X: =150
                         Y: =Title3_2.Y
                         ZIndex: =11
 
