--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -310,6 +310,7 @@
                 Visible: =wizardStep = 1
 
             com_NabGalleries As com_Galleries:
+                AddNew: =true
                 EntriesToDisplay: =4
                 EntryLabels: |-
                     ={Line1: "Broj artikla:", Line2: "Rok trajanja:", Line3: "LOT:", Line4: "Rezervisana količina:"}
