--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -374,6 +374,16 @@
             LayoutMinHeight: =640
             ZIndex: =4
 
+        TextCanvas2 As Text:
+            DisplayMode: =DisplayMode.Edit
+            Height: =32
+            LayoutMinHeight: =32
+            LayoutMinWidth: =96
+            Width: =96
+            X: =0
+            Y: =0
+            ZIndex: =5
+
     com_NabModal As com_Modal:
         IsInventura: =false
         IsNabavniNalog: =true
