Revert "SmartMerge, using common parent: 2d5107fa5247d1765f049191fdcea4dcedb357b7"
This reverts commit c954c1ac53155bc166763fcdb152071ed904bb90, reversing
changes made to 60ff6bec274e399d51fccc613ff0b02653849b3d.

--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -2,7 +2,8 @@ com_Modal As CanvasComponent:
     ChildTabPriority: =
     Fill: =RGBA(0, 0, 0, 0)
     Height: =App.Height
-    IsInventura: =false
+    IsInventura: =true
+    IsNabavniNalog: =false
     LineId: ="Text"
     Quantity: =100
     QuantityCompleted: =100
