--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -520,6 +520,53 @@ com_Galleries As CanvasComponent:
                         Y: =Title3_2.Y
                         ZIndex: =11
 
+                icn_InvAdd_1 As icon.AddDocument:
+                    BorderColor: =App.Theme.Colors.Darker40
+                    Color: =App.Theme.Colors.Darker30
+                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                    DisabledColor: =RGBA(244, 244, 244, 1)
+                    Height: =32
+                    Icon: =Icon.AddDocument
+                    OnSelect: |-
+                        =Collect(
+                            colEntries,
+                            {
+                                Created_By: ThisItem.Created_By,
+                                Creation_Date: ThisItem.Creation_Date,
+                                Entry_No: Text(CountRows(colEntries) + 1),
+                                Exp_Date: ThisItem.Exp_Date,
+                                Exp_Receipt_Date: ThisItem.Exp_Receipt_Date,
+                                Item_No: ThisItem.Item_No,
+                                Item_Tracking: ThisItem.Item_Tracking,
+                                LOT_No: Blank(),
+                                Location_Code: ThisItem.Location_Code,
+                                Positive: ThisItem.Positive,
+                                'Qty-to-Handle_Base': ThisItem.'Qty-to-Handle_Base',
+                                'Qty-to-Invoice_Base': ThisItem.'Qty-to-Invoice_Base',
+                                Quantity: ThisItem.Quantity,
+                                Quantity_Base: ThisItem.Quantity_Base,
+                                Quantity_Completed: Blank(),
+                                Quantity_NewLOT: ThisItem.Quantity_NewLOT,
+                                Res_Status: ThisItem.Res_Status,
+                                Shipment_Date: ThisItem.Shipment_Date,
+                                Source_ID: ThisItem.Source_ID,
+                                Source_Ref_No: ThisItem.Source_Ref_No,
+                                Source_SubType: ThisItem.Source_SubType,
+                                Source_Type: ThisItem.Source_Type
+                            }
+                        );
+                        Set(
+                            ScannedItem,
+                            Blank()
+                        );
+                        Reset(glr_Entries);
+                        //Set(isModalOpen, true);
+                    Visible: =com_Galleries.AddNew
+                    Width: =32
+                    X: =Parent.TemplateWidth - 50
+                    Y: =Body2_7.Y - 10
+                    ZIndex: =13
+
                 Group8 As group:
                     Height: =5
                     Width: =5
