--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -1,4 +1,5 @@
 com_Galleries As CanvasComponent:
+    AddNew: =false
     EntriesToDisplay: =5
     EntryLabels: |-
         ={Line1: "Line1", Line2: "Line2", Line3: "Line3", Line4: "Line4", Line5: "Line5"}
