--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -180,7 +180,7 @@ com_Modal As CanvasComponent:
                                         UpdateContext({potrebnaKolicina: Abs(glr_ProResEntries.Selected.Quantity) - inp_rezQty_2.Value})
                                     )
                                 );*/
-                            Placeholder: ="Unesite rezervisano količinu"
+                            Placeholder: ="Unesite LOT"
                             Required: =true
                             TriggerOutput: ="FocusOut"
                             Type: ="Text"
@@ -191,55 +191,78 @@ com_Modal As CanvasComponent:
                             Y: =40
                             ZIndex: =3
 
-                        Container8_3 As groupContainer.verticalAutoLayoutContainer:
-                            AlignInContainer: =AlignInContainer.SetByContainer
-                            FillPortions: =0
-                            LayoutAlignItems: =LayoutAlignItems.Center
-                            LayoutDirection: =LayoutDirection.Vertical
-                            LayoutGap: =5
-                            LayoutJustifyContent: =LayoutJustifyContent.Center
-                            LayoutMinHeight: =100
-                            LayoutMinWidth: =250
-                            LayoutMode: =LayoutMode.Auto
-                            RadiusBottomLeft: =4
-                            RadiusBottomRight: =4
-                            RadiusTopLeft: =4
-                            RadiusTopRight: =4
-                            Visible: =false
-                            Width: =100
-                            ZIndex: =4
+                    Container13_13 As groupContainer.verticalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutJustifyContent: =LayoutJustifyContent.Center
+                        LayoutMinHeight: =30
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Visible: =If(IsBlank(LotNo) && com_Modal.IsInventura, true, false)
+                        ZIndex: =2
 
-                            ButtonCanvas9_6 As Button:
-                                BorderStyle: =""
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                FontSize: =60
-                                Height: =32
-                                Icon: ="ChevronUp"
-                                Layout: ='ButtonCanvas.Layout'.IconOnly
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =96
-                                OnSelect: =Set(QuantityCompleted, QuantityCompleted + 1);
-                                Width: =96
-                                X: =0
-                                Y: =0
-                                ZIndex: =1
+                        TextCanvas3_14 As Text:
+                            AutoHeight: =true
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontColor: =
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =80
+                            Size: =20
+                            Text: ="Količina"
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =1
 
-                            ButtonCanvas9_7 As Button:
-                                BorderStyle: =""
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                FontSize: =60
-                                Height: =32
-                                Icon: ="ChevronDown"
-                                Layout: ='ButtonCanvas.Layout'.IconOnly
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =96
-                                OnSelect: =Set(QuantityCompleted, QuantityCompleted - 1);
-                                Width: =96
-                                X: =0
-                                Y: =0
-                                ZIndex: =2
+                        "inp_QtyInv As 'Text input'":
+                            Align: ='TextInputCanvas.Align'.Center
+                            Appearance: ='TextInputCanvas.Appearance'.Outline
+                            BasePaletteColor: =
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =0
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =320
+                            OnChange: |
+                                =/*If(
+                                    (!IsNumeric(inp_rezQty_2.Value) && !IsBlank(inp_rezQty_2.Value)) || Value(inp_rezQty_2.Value) < 0,
+                                    Notify(
+                                        "Unesite pozitivan broj.",
+                                        NotificationType.Error,
+                                        2000
+                                    );
+                                    Reset(inp_rezQty_2);
+                                    UpdateContext({potrebnaKolicina: 0}),
+                                    If(
+                                        Value(inp_rezQty_2.Value) > Abs(glr_ProResEntries.Selected.Quantity_Completed),
+                                        Reset(inp_rezQty_2);
+                                        UpdateContext({potrebnaKolicina: 0});
+                                        Notify(
+                                            "Maksimalna količina za isporuku je " & Abs(glr_ProResEntries.Selected.Quantity_Completed),
+                                            NotificationType.Information,
+                                            2000
+                                        ),
+                                        UpdateContext({potrebnaKolicina: Abs(glr_ProResEntries.Selected.Quantity) - inp_rezQty_2.Value})
+                                    )
+                                );*/
+                            Placeholder: ="Unesite količinu"
+                            Required: =true
+                            TriggerOutput: ="FocusOut"
+                            Type: ="Text"
+                            Value: =LotNo
+                            Visible: =true
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =3
 
                     Container13_10 As groupContainer.verticalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
@@ -253,7 +276,7 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        ZIndex: =2
+                        ZIndex: =3
 
                         TextCanvas3_11 As Text:
                             AutoHeight: =true
@@ -313,55 +336,6 @@ com_Modal As CanvasComponent:
                             Y: =0
                             ZIndex: =3
 
-                        Container8_1 As groupContainer.verticalAutoLayoutContainer:
-                            AlignInContainer: =AlignInContainer.SetByContainer
-                            FillPortions: =0
-                            Height: =0
-                            LayoutAlignItems: =LayoutAlignItems.Center
-                            LayoutDirection: =LayoutDirection.Vertical
-                            LayoutGap: =5
-                            LayoutJustifyContent: =LayoutJustifyContent.Center
-                            LayoutMinHeight: =100
-                            LayoutMinWidth: =250
-                            LayoutMode: =LayoutMode.Auto
-                            RadiusBottomLeft: =4
-                            RadiusBottomRight: =4
-                            RadiusTopLeft: =4
-                            RadiusTopRight: =4
-                            Visible: =false
-                            Width: =0
-                            ZIndex: =4
-
-                            ButtonCanvas9_2 As Button:
-                                BorderStyle: =""
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                FontSize: =60
-                                Height: =32
-                                Icon: ="ChevronUp"
-                                Layout: ='ButtonCanvas.Layout'.IconOnly
-                                LayoutMinWidth: =96
-                                OnSelect: =Set(QuantityCompleted, QuantityCompleted + 1);
-                                Width: =0
-                                X: =0
-                                Y: =0
-                                ZIndex: =1
-
-                            ButtonCanvas9_3 As Button:
-                                BorderStyle: =""
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                FontSize: =60
-                                Height: =32
-                                Icon: ="ChevronDown"
-                                Layout: ='ButtonCanvas.Layout'.IconOnly
-                                LayoutMinWidth: =96
-                                OnSelect: =Set(QuantityCompleted, QuantityCompleted - 1);
-                                Width: =0
-                                X: =0
-                                Y: =0
-                                ZIndex: =2
-
                     Container13_11 As groupContainer.verticalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutAlignItems: =LayoutAlignItems.Center
@@ -374,7 +348,7 @@ com_Modal As CanvasComponent:
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
                         Visible: =!com_Modal.IsInventura
-                        ZIndex: =3
+                        ZIndex: =4
 
                         TextCanvas3_13 As Text:
                             AutoHeight: =true
@@ -431,57 +405,6 @@ com_Modal As CanvasComponent:
                             Y: =0
                             ZIndex: =3
 
-                        Container8_2 As groupContainer.verticalAutoLayoutContainer:
-                            AlignInContainer: =AlignInContainer.SetByContainer
-                            FillPortions: =0
-                            Height: =0
-                            LayoutAlignItems: =LayoutAlignItems.Center
-                            LayoutDirection: =LayoutDirection.Vertical
-                            LayoutGap: =5
-                            LayoutJustifyContent: =LayoutJustifyContent.Center
-                            LayoutMinHeight: =100
-                            LayoutMinWidth: =250
-                            LayoutMode: =LayoutMode.Auto
-                            RadiusBottomLeft: =4
-                            RadiusBottomRight: =4
-                            RadiusTopLeft: =4
-                            RadiusTopRight: =4
-                            Visible: =false
-                            Width: =0
-                            ZIndex: =5
-
-                            ButtonCanvas9_4 As Button:
-                                BorderStyle: =""
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                FontSize: =60
-                                Height: =32
-                                Icon: ="ChevronUp"
-                                Layout: ='ButtonCanvas.Layout'.IconOnly
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =96
-                                OnSelect: =
-                                Visible: =true
-                                Width: =96
-                                X: =0
-                                Y: =0
-                                ZIndex: =1
-
-                            ButtonCanvas9_5 As Button:
-                                BorderStyle: =""
-                                DisplayMode: =DisplayMode.Edit
-                                FillPortions: =1
-                                FontSize: =60
-                                Height: =32
-                                Icon: ="ChevronDown"
-                                Layout: ='ButtonCanvas.Layout'.IconOnly
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =96
-                                Width: =96
-                                X: =0
-                                Y: =0
-                                ZIndex: =2
-
                     ErrorMsg As Text:
                         AlignInContainer: =AlignInContainer.Stretch
                         AutoHeight: =false
@@ -509,7 +432,7 @@ com_Modal As CanvasComponent:
                         Width: =Parent.Width
                         X: =0
                         Y: =0
-                        ZIndex: =4
+                        ZIndex: =5
 
                 hrz_ModalFooter As groupContainer.horizontalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
